parte ngFor non finito

--- a/API_Pokemon/src/app/app.component.html
+++ b/API_Pokemon/src/app/app.component.html
@@ -1,1 +1,8 @@
 {{data|json}}
+<html>
+    <body>
+        <div *ngFor="let type of data" >
+            {{type.results}}
+        </div>
+    </body>
+</html>
