List type of Pokemon

--- a/API_Pokemon/src/app/app.component.html
+++ b/API_Pokemon/src/app/app.component.html
@@ -1,8 +1,8 @@
-{{data|json}}
+
 <html>
     <body>
-        <div *ngFor="let type of data" >
-            {{type.results}}
+        <div *ngFor="let type of data.results" >
+            {{type.name}}
         </div>
     </body>
 </html>
