Funzionato lista di type

--- a/API_Pokemon/src/app/app.component.html
+++ b/API_Pokemon/src/app/app.component.html
@@ -2,7 +2,7 @@
 <html>
     <body>
         <div *ngFor="let type of data.results" >
-            <a routerLink="['/Pokemon', type.url]">
+            <a routerLink="/Pokemon/{{spezza(type.url)}}">
                 {{type.name}}
                 <hr>
             </a>
