--- a/API_Pokemon/src/app/pokemon-list/pokemon-list.component.html
+++ b/API_Pokemon/src/app/pokemon-list/pokemon-list.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div *ngFor="let type of data.results" >
-            <a routerLink="/Pokemon/{{spezza(type.url)}}">
+            <a routerLink="/Type/{{spezza(type.url)}}">
                 {{type.name}}
                 <hr>
             </a>
