--- a/API_Pokemon/src/app/pokemon-id/pokemon-id.component.html
+++ b/API_Pokemon/src/app/pokemon-id/pokemon-id.component.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div *ngFor="let pokemon of data.pokemon" >
-            <a routerLink="Pokemon/:Id/{{spezza_Url(pokemon.pokemon.url)}}">
+            <a routerLink="Pokemon/{{spezza_Url(pokemon.pokemon.url)}}">
                 {{pokemon.pokemon.name}}
                 <hr>
             </a>
