--- a/API_Holiday/src/app/app.component.html
+++ b/API_Holiday/src/app/app.component.html
@@ -1,5 +1,16 @@
 <html>
+    <h1>Search</h1>
 
+    <p>
+      Country: <input type="text" #newquery>
+      Year: <input type="text" #newquery1>
+
+      <button (click)="submit(newquery, newquery1)">Search</button>
+    </p>
+    
+    <div *ngIf="results"> 
+       {{results | json}}
+    </div>
 
 <router-outlet></router-outlet>
 
